Another attempt to fix header bar not showing on mobile

--- a/static/assets/sass/layout/_sidebar.scss
+++ b/static/assets/sass/layout/_sidebar.scss
@@ -134,7 +134,7 @@
 			height: _size(sidebar-height);
 			left: 0;
 			line-height: _size(sidebar-height);
-			overflow: hidden;
+			/*overflow: hidden;*/
 			padding: 0;
 			text-align: center;
 			top: 0;
